--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ latex_formula.txt
 /project2/your_team_name
 /project2/*.pickle
 /project2/deep_dark_fantastic_boys_next_door/*.pickle
+/project2/plan.docx
