--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ project2/deep_dark_fantastic_boys_next_door/agent/__pycache__/
 .idea/
 **/*.iml
 **/*.xml
+project2/deep_dark_fantastic_boys_next_door/agent/__pycache__/__init__.cpython-36.pyc
