--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ project2/deep_dark_fantastic_boys_next_door/agent/__pycache__/
 **/*.iml
 **/*.xml
 project2/deep_dark_fantastic_boys_next_door/agent/__pycache__/__init__.cpython-36.pyc
+/sample-solution
